<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFAFA"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/air_window"
        android:layout_width="fill_parent"
        android:layout_height="250dip"
        android:background="@drawable/air_bg_gray"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/air_mode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="10.0dip"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="1"
                android:background="@drawable/air_auto"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/image_cold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="1"
                android:background="@drawable/air_refrigeration"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/image_watted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="1"
                android:background="@drawable/air_watted"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/image_supply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="1"
                android:background="@drawable/air_supply"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/image_heating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_weight="1"
                android:background="@drawable/ari_heating"
                android:textSize="30sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginTop="10.0dip"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/air_context"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="5.0dip"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textColor="#222222"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/temp_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="#222222"
                    android:textSize="60sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="2dip"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="#222222"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/wind_dir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="#222222"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/wind_dir_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="#222222"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_air_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_power"
            android:text="@string/ari_power"
            android:textColor="@color/infotextcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_air_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_normal"
            android:text="@string/ari_up"
            android:textColor="@color/btntextcolor" />

        <Button
            android:id="@+id/btn_air_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_normal"
            android:text="@string/ari_mode"
            android:textColor="@color/btntextcolor" />

        <Button
            android:id="@+id/btn_air_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_normal"
            android:text="@string/ari_down"
            android:textColor="@color/btntextcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_air_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_normal"
            android:text="@string/air_wind_count"
            android:textColor="@color/btntextcolor" />

        <Button
            android:id="@+id/btn_air_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_normal"
            android:text="@string/ari_direction"
            android:textColor="@color/btntextcolor" />

        <Button
            android:id="@+id/btn_air_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_normal"
            android:text="@string/ari_aotu"
            android:textColor="@color/btntextcolor" />
    </LinearLayout>

</LinearLayout>